updated vr controls

--- a/viverse-icosa-gallery/index.html
+++ b/viverse-icosa-gallery/index.html
@@ -86,7 +86,7 @@
 
 addEventListener( "error", event =>{ alert( event.lineno + " = " + event.message + '<br>' )})
 
-const app = 'v3sqp77tbd'
+const app = '27pym2r6uk'
 
 import * as THREE                               from 'three'
 import { RoomEnvironment }                      from "three/addons/environments/RoomEnvironment.js"
