updated touch ui

--- a/viverse-icosa-gallery/index.html
+++ b/viverse-icosa-gallery/index.html
@@ -8,7 +8,8 @@
                 height: 100%;
                 width: 100%;
                 margin: 0;
-            }
+				touch-action: none;
+			}
 			
 			@font-face {
 				font-family: 'MundialRegular';
@@ -91,7 +92,7 @@
 
 			addEventListener( "error", event =>{ msgs_div.innerHTML = event.lineno + " = " + event.message + '<br>' })
 
-			const app = '543hm3fpks'
+			const app = 'g3wh9fpct3'
 		
             import { Viewer }     from "./icosa-viewer.module.js"
 			import * as THREE     from 'three'
