places the vr camera at the scene's camera

--- a/viverse-icosa-gallery/index.html
+++ b/viverse-icosa-gallery/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <html>
     <head>
-        <title>viverse icosa viewer v251125</title>
+        <title>viverse icosa viewer v251128</title>
         <script type="importmap" class="es6_modules_map">
             {
                 "imports": {
@@ -91,7 +91,7 @@
 
 			addEventListener( "error", event =>{ msgs_div.innerHTML = event.lineno + " = " + event.message + '<br>' })
 
-			const app = 'gcf45tqafx'
+			const app = '58xjcjhwwb'
 		
             import { Viewer }     from "./icosa-viewer.module.js"
 			import * as THREE     from 'three'
@@ -193,9 +193,11 @@
 			
 			viewer.renderer.xr.addEventListener( 'sessionstart', () => {
 				in_vr = true
+				viewer.cameraRig.position.copy( viewer.activeCamera.position )
 			})
 			viewer.renderer.xr.addEventListener( 'sessionend',   () => {
 				in_vr = false
+				viewer.activeCamera.position.copy( viewer.cameraRig.position )
 			})
 			
 			const vr_button        = VRButton.createButton( viewer.renderer )
