v251128 - updated pc controls & touch icons

--- a/viverse-icosa-gallery/index.html
+++ b/viverse-icosa-gallery/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <html>
     <head>
-        <title>viverse icosa viewer v251128</title>
+        <title>viverse icosa viewer v251128-3</title>
         <script type="importmap" class="es6_modules_map">
             {
                 "imports": {
@@ -91,7 +91,7 @@
 
 			addEventListener( "error", event =>{ msgs_div.innerHTML = event.lineno + " = " + event.message + '<br>' })
 
-			const app = '58xjcjhwwb'
+			const app = '7jc8ubqxr9'
 		
             import { Viewer }     from "./icosa-viewer.module.js"
 			import * as THREE     from 'three'
